# CyberDefense

./: .gitignore  LICENSE  README.md  app.py  app_offline.py  app_realtime.py  cli.py  config.py  cyberdefense.py  example_parameters.json  notes.org  requirements.txt
src/: config.py  dataDownload.py  download.py  featureExtraction.py  gconfig.py  time_tracker.py
src/BiRNN_Running_Code/: integrate_run.sh
src/BiRNN_Running_Code/BiRNN_Run/: save_memory_run.sh
src/BiRNN_Running_Code/BiRNN_Run/code_template/: gru_2layer.py  gru_3layer.py  gru_4layer.py  lstm_2layer.py  lstm_3layer.py  lstm_4layer.py
src/BiRNN_Running_Code/BiRNN_Run/dataset/: test.csv  train.csv
src/BiRNN_Running_Code/data_representation/: TableGenerator.py
src/CSharp_Tool_BGP/: Readme.md
src/CSharp_Tool_BGP/ConsoleApplication1/: Program.cs
src/RNN_Running_Code/RNN_Run/code_template/: gru_2layer.py  gru_3layer.py  gru_4layer.py  lstm_2layer.py  lstm_3layer.py  lstm_4layer.py
src/RNN_Running_Code/RNN_Run/dataset/: test.csv  train.csv
src/VFBLS_v110/: BLS_realtime.py
src/VFBLS_v110/bls/model/: bls_train.py  vfbls_train.py
src/VFBLS_v110/bls/processing/: feature_select_imp_cnl.py
src/featureSelection/: featureSelect_pdf.py
src/modelOcean/: gru_2layer_demo.py
src/mrtprocessor/: BS_thread_pool.hpp  CMakeLists.txt  Readme.md  filters.cpp  filters.h  main.cpp  multibgpreader.cpp  multibgpreader.h  summarydata.cpp  summarydata.h  util.cpp  util.h
src/mrtprocessor/unit_tests/: CMakeLists.txt  util_tests.cpp
static/css/: style.css
static/js/: contact_email.js  data_emit_labels_5min.js  data_offline_post.js  dateTimePicker.js
templates/: bgp_ad_offline.html  bgp_ad_realtime.html  contact.html  data_clustering.html  index.html  layout.html
